Fix Safari Bugs - Remove nested z-index don't work on safari - Handle safari scroll-x - Fix github Img on details.html page

--- a/src/components/CustomHeader/style.css
+++ b/src/components/CustomHeader/style.css
@@ -1,6 +1,11 @@
 :host {
-    z-index: 10;
     position: relative;
+    z-index: 10;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
 }
 
 .wrapper {
@@ -8,20 +13,12 @@
     justify-content: space-between;
     align-items: center;
     backdrop-filter: blur(2px);
-    z-index: 10;
 }
 
 .wrapper h1 {
     transition: opacity .15s ease-out;
 }
 
-.custom-header__hamburger-menu--open {
-    background: none !important;
-}
-
-.custom-header__hamburger-menu--open h1 {
-    opacity: 0;
-}
 
 .wrapper--theme-change {
     animation: fadeInHeader .3s ease-out forwards;
@@ -43,7 +40,7 @@
 
 .hamburger-menu__nav .wrapper__navs {
     display: block;
-    margin-left: 2rem;
+    margin-left: 3rem;
     margin-top: 11rem;
     width: min-content;
     font-weight: bold;
@@ -57,6 +54,15 @@
 
 .wrapper__hamburger-menu--open {
     transform: translateX(0%);
+}
+
+.custom-header__hamburger-menu__cross-icon {
+    margin-top: 1rem;
+    margin-left: 3rem;
+}
+
+.custom-header__hamburger-menu__cross-icon svg {
+    fill: var(--content)
 }
 
 
@@ -78,6 +84,7 @@ a {
 svg path {
     stroke: var(--content);
 }
+
 
 @media screen and (min-width: 1050px) {
     .wrapper {
