--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
     position: relative;
 }
 
+
 [data-theme="light"] {
     --primary-color: #6880FF;
     --accent-primary-color: #3450E0;
@@ -41,7 +42,6 @@ html, body {
 }
 
 body {
-
     box-sizing: border-box;
     font-family: "Satoshi-Variable", serif;
     font-size: 16px;
@@ -49,6 +49,7 @@ body {
     background-color: var(--background-main);
     color: var(--content);
     -webkit-font-smoothing: antialiased;
+    isolation: isolate;
 }
 
 
@@ -65,11 +66,11 @@ p {
 .custom-header__hamburger-menu {
     position: absolute;
     inset: 0;
-    z-index: 2;
     background-color: var(--background-secondary);
     transition: transform 0.3s;
-    transition-timing-function: ease-out;
-    transform: translateX(100%)
+    transition-timing-function: cubic-bezier(0.5, 0, 0.58, 0.01);
+    transform: translateX(100%);
+
 }
 
 .custom-header__hamburger-menu--open {
